--- a/src/main/webapp/css/fore/style.css
+++ b/src/main/webapp/css/fore/style.css
@@ -383,7 +383,7 @@ div.copyright {
 	background-color: black;
 	border-top-style: solid;
 	border-top-width: 2px;
-	border-top-color: solid;
+	/*border-top-color: solid;*/
 	border-top-color: #C40000;
 	margin-top:20px;
 
@@ -1025,7 +1025,7 @@ span.productReviewTopReviewLinkNumber {
 }
 
 div.productDetailImagesPart img {
-	display: block; margin 20px 0px;
+	display: block; margin: 20px 0px;
 	width: 790px;
 }
 
@@ -1610,7 +1610,7 @@ div.cartFoot button {
 	background-color: #AAAAAA;
 	border: 0px solid #AAAAAA;
 	color: white;
-	height: height%;
+	height: 100%;
 	width: 120px;
 	height: 50px;
 	font-size: 20px;
