--- a/src/main/webapp/css/fore/style.css
+++ b/src/main/webapp/css/fore/style.css
@@ -236,6 +236,7 @@ div.searchBelow span {
 div.searchBelow {
 	margin-top: 3px;
 	margin-left: -20px;
+	margin-right: -20px;
 }
 
 div.searchBelow a {
